# object-detection

./: .gitignore  Cargo.toml  README.md  cargo.toml  package.json
app/: package.json  vite.config.ts
app/src/: index.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: main.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/scripts/: ai-components.js  ai.js  image-page-components.js  image-page.js  load-status.js  main.js  page-handler.js  video-page-components.js  video-page.js
app/src/styles/: styles.css
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
