[package]
authors = ["Rakesh"]
description = "CLI to detect objects using ONNX."
edition = "2021"
name = "object-detection-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
object-detection-core = {  workspace = true }