[package]
name = "object-detection-cli"
version = "0.1.0"
description = "CLI to detect objects using ONNX."
authors = ["Rakesh"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
object-detection-core = {  workspace = true }