[package]
authors = ["Rakesh"]
description = "Core package to detect objects using ONNX."
edition = "2021"
name = "object-detection-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.25"
bracket-color = "0.8.7"
image = "0.25"
imageproc = "0.24"
tract-onnx = "0.21"
