[package]
authors = ["Rakesh"]
description = "Core package to detect objects using ONNX."
edition = "2021"
name = "object-detection-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = { workspace = true}
bracket-color = { workspace = true}
image = { workspace = true }
imageproc = { workspace = true }
tract-onnx = { workspace = true }
