[package]
name = "object-detection-core"
version = "0.1.0"
description = "Core package to detect objects using ONNX."
authors = ["Rakesh"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = { workspace = true}
bracket-color = { workspace = true}
image = { workspace = true }
imageproc = { workspace = true }
tract-onnx = { workspace = true }
