[package]
name = "object-detection"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "obejct_detection_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
object-detection-core = {path = "../../core"}
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19.0"
tract-onnx = "0.21.4"
base64 = "0.22.1"
image = "0.25.1"

# [features]
# # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
# custom-protocol = ["tauri/custom-protocol"]
