[package]
name = "object-detection-app"
version = "0.1.0"
description = "GUI to detect objects using ONNX."
authors = ["Rakesh"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "obejct_detection_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
base64 = { workspace = true }
image = { workspace = true }
object-detection-core = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { workspace = true, features = [] }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-shell = { workspace = true }
tract-onnx = { workspace = true }

# [features]
# # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
# custom-protocol = ["tauri/custom-protocol"]
